<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.MaterialComponents.DayNight.DialogWhenLarge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/jkdsbgsdkhbfsd"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="#D400D4B1"
                android:orientation="vertical"
                android:padding="15dp">

                <LinearLayout
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/phoneInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/name_hint"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:minHeight="48dp"
                        android:textColorHint="#006064" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mobile_no"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/nameInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/mobile_no_hint"
                        android:inputType="phone"
                        android:maxLength="8"
                        android:minHeight="48dp"
                        android:textColorHint="#006064" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/size"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/group_size"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:autoSizeTextType="uniform" />

                </LinearLayout>

                <SeekBar
                    android:id="@+id/groupSizeInput"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="8"
                    android:min="1"
                    android:progress="0"
                    android:scrollbarSize="7dp" />

                <TextView
                    android:id="@+id/sizeDisplay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/_1"
                    android:textColor="#2C3462"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:background="#D400D4B1"
                android:orientation="vertical"
                android:padding="15dp">

                <DatePicker
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="clip_horizontal" />

                <TimePicker
                    android:id="@+id/time"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="clip_horizontal"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:background="#D400D4B1"
                android:orientation="vertical"
                android:padding="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:id="@+id/smokingRadio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/nonSmokingArea"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/non_smoking_area"
                            android:textSize="20sp" />

                        <RadioButton
                            android:id="@+id/smokingArea"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/smoking_area"
                            android:textSize="20sp" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/finalDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:background="#D400D4B1"
                android:orientation="vertical"
                android:padding="15dp"
                android:scaleX="0"
                android:scaleY="0">

                <TextView
                    android:id="@+id/finalDetailsDisplay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:background="#D400D4B1"
                android:orientation="vertical"
                android:padding="15dp">


                <Button
                    android:id="@+id/submitButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:textSize="24sp"
                    app:backgroundTint="#16417C" />

                <Button
                    android:id="@+id/resetButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reset"
                    android:textSize="24sp"
                    app:backgroundTint="#16417C" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>
